--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
 		"angular-cookies": "~1.0.6",
 		"angular-bootstrap": "~0.4.0",
 		"json3": "~3.2.4",
-		"jquery": "~1.9.1"
+		"jquery": "~1.9.1",
+		"underscore": "~1.5.1"
 	},
 	"devDependencies": {
 		"angular-mocks": "~1.0.5",
