--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     , "forever": "latest"
     , "mean-logger": "latest"
     , "bower": "latest"
+    , "bson": "latest"
   }
   , "devDependencies": {
         "supertest": "latest"
