--- a/bower.json
+++ b/bower.json
@@ -3,16 +3,29 @@
 	"version": "1.0.0",
 	"dependencies": {
 		"bootstrap": "2.3.2",
-		"angular": "~1.0.6",
-		"angular-resource": "~1.0.6",
-		"angular-cookies": "~1.0.6",
-		"angular-bootstrap": "~0.4.0",
-		"json3": "~3.2.4",
-		"jquery": "~1.9.1",
-		"underscore": "~1.5.1"
+        "angular": "~1.0.6",
+        "angular-resource": "~1.0.6",
+        "angular-cookies": "~1.0.6",
+        "angular-bootstrap": "~0.4.0",
+        "angular-ui-utils": "0.0.4",
+        "json3": "~3.2.4",
+        "jquery": "~1.9.1",
+        "lodash": "latest",
+        "d3": "latest",
+        "async": "latest"
 	},
 	"devDependencies": {
 		"angular-mocks": "~1.0.5",
 		"angular-scenario": "~1.0.5"
-	}
+	},
+    "exportsOverride": {
+    	"bootstrap": {
+    		"css": "docs/assets/css/bootstrap*.css",
+    		"js": "docs/assets/js/bootstrap.js",
+    		"img": "docs/assets/img/glyphicons-halflings*.png"
+    	},
+        "angular-ui-utils": {
+            "modules": "modules/route/route.js"
+        }
+    }
 }
